package edu.fiuba.algo3.modelo.creditos;

import edu.fiuba.algo3.modelo.jugador.Jugador;

public interface Recompensa {

    void otorgarRecompensa(Jugador jugador);

}
