@startuml

left to right direction
skinparam linetype ortho

package "enemigos"{
package "movimiento"{
    interface Movimiento << interface >>
    class MovimientoCamino
    class MovimientoDiagonal
    class MovimientoHorizontal
    class MovimientoVertical
}

package "recompensa"{
    interface Recompensa << interface >>
    class RecompensaRandom
    class RecompensaSimple
}

package "tipoDeAtaque"{
    abstract Danio
    class DanioLechuzal
    class DanioSimple
    class DanioTopal
}

package "velocidad"{
    class Velocidad
    }
class Arania
abstract Enemigo
class Hormiga
class Lechuza
class Topo
}

Arania --|>  Enemigo

Enemigo *-- "1" "tipoDeAtaque"
Enemigo *-- "1" "movimiento"
Enemigo *-- "1" "recompensa"
Enemigo *-- "1" "velocidad"
Hormiga --|>  Enemigo
Lechuza --|>  Enemigo
Topo --|>  Enemigo
@enduml
